--- a/index.html
+++ b/index.html
@@ -4,8 +4,48 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script
+      src="https://kit.fontawesome.com/92d74d2bc3.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Document</title>
     <link rel="stylesheet" href="./styles.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <div class="profile">
+        <div class="title">
+          <h1>Byiringiro saad</h1>
+        </div>
+        <div class="contacts">
+          <div class="contact">
+            <i class="fa-solid fa-circle-phone"></i>
+            <p>078-213-8100</p>
+          </div>
+          <div class="contact">
+            <i class="fa-brands fa-linkedin"></i>
+            <p>https://www.linkedin.com/in/byiringiro-saad-1212861ba/</p>
+          </div>
+          <div class="contact">
+            <i class="fa-solid fa-circle-envelope"></i>
+            <p>byiringirosaad@gmail.com</p>
+          </div>
+          <div class="contact">
+            <i class="fa-brands fa-twitter-square"></i>
+            <p>@4saad6</p>
+          </div>
+        </div>
+        <div class="description">
+          <p>
+            IT Professional with over <span>10 years</span> of experience
+            specializing in <span>IT department management</span> for
+            international logistics companies. I can implement effective
+            <span>IT strategies</span> at local and global levels.My greatest
+            strength is business awareness, which enables me to permanently
+            streamline infrastructures and applications.
+          </p>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
