--- a/index.html
+++ b/index.html
@@ -14,36 +14,40 @@
   <body>
     <div class="container">
       <div class="profile">
-        <div class="title">
-          <h1>Byiringiro saad</h1>
-        </div>
-        <div class="contacts">
-          <div class="contact">
-            <i class="fa-solid fa-circle-phone"></i>
-            <p>078-213-8100</p>
+        <div class="blue"></div>
+        <div class="content">
+          <div class="title">
+            <h1>Byiringiro saad</h1>
+            <p>IT Project Manager</p>
           </div>
-          <div class="contact">
-            <i class="fa-brands fa-linkedin"></i>
-            <p>https://www.linkedin.com/in/byiringiro-saad-1212861ba/</p>
+          <div class="contacts">
+            <div class="contact">
+              <i class="fa-solid fa-phone"></i>
+              <a href="#">078-213-8100</a>
+            </div>
+            <div class="contact">
+              <i class="fa-brands fa-linkedin-in"></i>
+              <a href="#">linkedin.com/byiringirosaad</a>
+            </div>
+            <div class="contact">
+              <i class="fa-solid fa-envelope"></i>
+              <a href="#">byiringirosaad@gmail.com</a>
+            </div>
+            <div class="contact">
+              <i class="fa-brands fa-twitter"></i>
+              <a href="#">@4saad6</a>
+            </div>
           </div>
-          <div class="contact">
-            <i class="fa-solid fa-circle-envelope"></i>
-            <p>byiringirosaad@gmail.com</p>
+          <div class="description">
+            <p>
+              IT Professional with over <span>10 years</span> of experience
+              specializing in <span>IT department management</span> for
+              international logistics companies. I can implement effective
+              <span>IT strategies</span> at local and global levels.My greatest
+              strength is business awareness, which enables me to permanently
+              streamline infrastructures and applications.
+            </p>
           </div>
-          <div class="contact">
-            <i class="fa-brands fa-twitter-square"></i>
-            <p>@4saad6</p>
-          </div>
-        </div>
-        <div class="description">
-          <p>
-            IT Professional with over <span>10 years</span> of experience
-            specializing in <span>IT department management</span> for
-            international logistics companies. I can implement effective
-            <span>IT strategies</span> at local and global levels.My greatest
-            strength is business awareness, which enables me to permanently
-            streamline infrastructures and applications.
-          </p>
         </div>
       </div>
     </div>
