--- a/index.html
+++ b/index.html
@@ -50,6 +50,288 @@
           </div>
         </div>
       </div>
+      <div class="experience">
+        <div class="title">
+          <div class="blue"></div>
+          <div class="lines">
+            <i class="fa-solid fa-briefcase"></i>
+            <div class="line"></div>
+          </div>
+          <div class="content">
+            <p>Experience</p>
+          </div>
+        </div>
+        <ul>
+          <li>
+            <div class="blue">
+              <p>2006-12-present</p>
+            </div>
+            <div class="lines">
+              <div class="small"></div>
+              <div class="dot"></div>
+              <div class="line"></div>
+            </div>
+            <div class="list">
+              <p class="sub-title">Senior Project Manager</p>
+              <p>Seton Hospital, ME</p>
+              <ul>
+                <li>
+                  Oversee all major hospital IT projects fro 10+years, focus on
+                  cost reduction.
+                </li>
+                <li>
+                  Responsible for creating, improving, and developing IT project
+                  strategies.
+                </li>
+                <li>
+                  Implemented the highly successful Learn Training and Six Sigma
+                  for all employees.
+                </li>
+                <li>
+                  Reduced the costs of IT infrastructure maintenance by 5%
+                </li>
+              </ul>
+            </div>
+          </li>
+          <li>
+            <div class="blue">
+              <p>2004-09 - 2006-11</p>
+            </div>
+            <div class="lines">
+              <div class="small"></div>
+              <div class="dot"></div>
+              <div class="line"></div>
+            </div>
+            <div class="list">
+              <p class="sub-title">Junior Project Manager</p>
+              <p>Seton Hospital, ME</p>
+              <ul>
+                <li>
+                  Streamlined IT logistics and administration operation cutting
+                  costs by 25%
+                </li>
+                <li>
+                  Diagnosed problems with hardware and operating systems and
+                  implemented new solutions
+                </li>
+                <li>Maintained the user database of over 30000 patients</li>
+                <li>
+                  Managed project for lean training for all IT Support Officers
+                </li>
+              </ul>
+            </div>
+          </li>
+        </ul>
+      </div>
+      <div class="education">
+        <div class="title">
+          <div class="blue"></div>
+          <div class="lines">
+            <i class="fa-solid fa-graduation-cap"></i>
+            <div class="line"></div>
+          </div>
+          <div class="content">
+            <p>Education</p>
+          </div>
+        </div>
+        <ul>
+          <li>
+            <div class="blue">
+              <p>1996-09 - 2001-05</p>
+            </div>
+            <div class="lines">
+              <div class="small"></div>
+              <div class="dot"></div>
+              <div class="line"></div>
+            </div>
+            <div class="list">
+              <p class="sub-title">
+                BS/MS in Computer Science, University of Maryland
+              </p>
+              <ul>
+                <li>Graduated Summa Cum Laude</li>
+                <li>Member of Student Association of Computer Science</li>
+                <li>
+                  Managed a student project to organize a conference for 50+
+                  professionals
+                </li>
+              </ul>
+            </div>
+          </li>
+        </ul>
+      </div>
+      <div class="skills">
+        <div class="title">
+          <div class="blue"></div>
+          <div class="lines">
+            <i class="fa-solid fa-droplet"></i>
+            <div class="line"></div>
+          </div>
+          <div class="content">
+            <p>Skills</p>
+          </div>
+        </div>
+        <ul>
+          <li>
+            <div class="blue"></div>
+            <div class="lines">
+              <div class="small"></div>
+              <div class="dot"></div>
+              <div class="line"></div>
+            </div>
+            <p>
+              <span>Business Process Improvement</span> - history of successful
+              innovations leading to cost savings
+            </p>
+          </li>
+          <li>
+            <div class="blue"></div>
+            <div class="lines">
+              <div class="small"></div>
+              <div class="dot"></div>
+              <div class="line"></div>
+            </div>
+            <p>
+              <span>Vendor Management</span> - managing vendors in projects with
+              budget over $1'000'000.
+            </p>
+          </li>
+          <li>
+            <div class="blue"></div>
+            <div class="lines">
+              <div class="small"></div>
+              <div class="dot"></div>
+              <div class="line"></div>
+            </div>
+            <p>
+              <span>Project Scheduling</span> - over 90% of projects led were
+              finished in due time.
+            </p>
+          </li>
+          <li>
+            <div class="blue"></div>
+            <div class="lines">
+              <div class="small"></div>
+              <div class="dot"></div>
+              <div class="line"></div>
+            </div>
+            <p>
+              <span>Sales Analysis</span> - background in IT Sales with deep
+              understanding of negotiating contracts
+            </p>
+          </li>
+        </ul>
+      </div>
+      <div class="gap">
+        <div class="blue"></div>
+        <div class="lines">
+          <div class="line"></div>
+        </div>
+        <div class="content"></div>
+      </div>
+      <div class="software">
+        <div class="title">
+          <div class="blue"></div>
+          <div class="lines">
+            <i class="fa-solid fa-desktop"></i>
+            <div class="line"></div>
+          </div>
+          <div class="content">
+            <p>Software</p>
+          </div>
+        </div>
+        <ul>
+          <li>
+            <div class="blue"></div>
+            <div class="lines">
+              <div class="small"></div>
+              <div class="dot"></div>
+              <div class="line"></div>
+            </div>
+            <div class="item">
+              <p>Microsoft Project, MS Windows Server, Linux/Unix</p>
+              <div class="levels">
+                <div class="dots">
+                  <div class="dot full"></div>
+                  <div class="dot full"></div>
+                  <div class="dot full"></div>
+                  <div class="dot full"></div>
+                  <div class="dot full"></div>
+                </div>
+                <p>Excellent</p>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="blue"></div>
+            <div class="lines">
+              <div class="small"></div>
+              <div class="dot"></div>
+              <div class="line"></div>
+            </div>
+            <div class="item">
+              <p>MS Windows Server</p>
+              <div class="levels">
+                <div class="dots">
+                  <div class="dot full"></div>
+                  <div class="dot full"></div>
+                  <div class="dot full"></div>
+                  <div class="dot full"></div>
+                  <div class="dot blank"></div>
+                </div>
+                <p>Very Good</p>
+              </div>
+            </div>
+          </li>
+        </ul>
+      </div>
+      <div class="gap">
+        <div class="blue"></div>
+        <div class="lines">
+          <div class="line"></div>
+        </div>
+        <div class="content"></div>
+      </div>
+      <div class="certifications">
+        <div class="title">
+          <div class="blue"></div>
+          <div class="lines">
+            <i class="fa-solid fa-medal"></i>
+            <div class="line"></div>
+          </div>
+          <div class="content">
+            <p>Certifications</p>
+          </div>
+        </div>
+        <ul>
+          <li>
+            <div class="blue">
+              <p>2015-05</p>
+            </div>
+            <div class="lines">
+              <div class="small"></div>
+              <div class="dot"></div>
+              <div class="line"></div>
+            </div>
+            <p>PMP - Project Management Institute</p>
+          </li>
+          <li>
+            <div class="blue">
+              <p>2014-04</p>
+            </div>
+            <div class="lines">
+              <div class="small"></div>
+              <div class="dot"></div>
+              <div class="line"></div>
+            </div>
+            <p>PRINCE2 <span>&reg;</span> Foundation</p>
+          </li>
+        </ul>
+      </div>
+      <div class="end">
+        <div class="blue"></div>
+        <div class="content"></div>
+      </div>
     </div>
   </body>
 </html>
