--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
       src="https://kit.fontawesome.com/92d74d2bc3.js"
       crossorigin="anonymous"
     ></script>
+    <script src="./app.js"></script>
     <title>Document</title>
     <link rel="stylesheet" href="./styles.css" />
   </head>
@@ -17,7 +18,7 @@
         <div class="blue"></div>
         <div class="content">
           <div class="title">
-            <h1>Byiringiro saad</h1>
+            <h1 onclick="changeColors()">Byiringiro saad</h1>
             <p>IT Project Manager</p>
           </div>
           <div class="contacts">
