--- a/src/index.html
+++ b/src/index.html
@@ -24,19 +24,19 @@
           <div class="contacts">
             <div class="contact">
               <i class="fa-solid fa-phone"></i>
-              <a href="#">078-213-8100</a>
+              <a href="#">774-987-4009</a>
             </div>
             <div class="contact">
               <i class="fa-brands fa-linkedin-in"></i>
-              <a href="#">linkedin.com/byiringirosaad</a>
+              <a href="#">linkedin.com/johnutw</a>
             </div>
             <div class="contact">
               <i class="fa-solid fa-envelope"></i>
-              <a href="#">byiringirosaad@gmail.com</a>
+              <a href="#">j.smith@uptowork.com</a>
             </div>
             <div class="contact">
               <i class="fa-brands fa-twitter"></i>
-              <a href="#">@4saad6</a>
+              <a href="#">@johnsmithutw</a>
             </div>
           </div>
           <div class="description">
