--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
         <div class="blue"></div>
         <div class="content">
           <div class="title">
-            <h1 onclick="changeColors()">Byiringiro saad</h1>
+            <h1 onclick="changeColors()">Byiringiro Saad</h1>
             <p>IT Project Manager</p>
           </div>
           <div class="contacts">
